--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -126,29 +126,31 @@ pages:
 
     - label: Product data types and interfaces
       children:
+        - label: Product interface implementations
+           url: /graphql/product/product-interface-implementations.html
+
+        - label: CustomizableOptionInterface
+          url: /graphql/product/customizable-option-interface.html
+
+        - label: Bundle product data types
+          url: /graphql/product/bundle-product.html
+
+        - label: Configurable product data types
+          url: /graphql/product/configurable-product.html
+
+        - label: Downloadable product data types
+          url: /graphql/product/downloadable-product.html
+
+        - label: GiftCardProduct data types
+          url: /graphql/product/gift-card-product.html
+
+        - label: GroupedProduct data types
+          url: /graphql/product/grouped-product.html
+
+    - label: Reference
+      children:
             - label: Customer endpoint
               url: /graphql/reference/customer.html
-
-            - label: Product interface implementations
-              url: /graphql/reference/product-interface-implementations.html
-
-            - label: CustomizableOptionInterface
-              url: /graphql/reference/customizable-option-interface.html
-
-            - label: Bundle product data types
-              url: /graphql/product/bundle-product.html
-
-            - label: Configurable product data types
-              url: /graphql/product/configurable-product.html
-
-            - label: Downloadable product data types
-              url: /graphql/product/downloadable-product.html
-
-            - label: GiftCardProduct endpoint
-              url: /graphql/reference/gift-card-product.html
-
-            - label: GroupedProduct endpoint
-              url: /graphql/reference/grouped-product.html
 
             - label: Quote endpoint (cart query)
               url: /graphql/reference/quote.html
