--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -100,6 +100,9 @@ pages:
         - label: RedirectUrl widget
           url: /javascript-dev-guide/widgets/widget_redirectUrl.html
 
+        - label: RowBuilder widget
+          url: /javascript-dev-guide/widgets/widget-row-builder.html
+
         - label: Tabs widget
           url: /javascript-dev-guide/widgets/widget_tabs.html
 
