--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -4,8 +4,73 @@ description: |
   We exclude from this list proofreading, spelling checks, and all minor updates.
 link: /whats-new.html
 thread: /whatsnew-feed.xml
-updated: Tue Aug 20 11:10:17 2019
+updated: Mon Aug 26 21:09:12 2019
 entries:
+- description: Added new code examples to the [JavaScript Mixins](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/javascript/js_mixins.html)
+    topic.
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5229
+- description: Added new code examples to the [Loader widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_loader.html)
+    topic.
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5230
+- description: Added information about how to [retrieve dependency injection configuration
+    information](https://devdocs.magento.com/guides/v2.3/extension-dev-guide/build/di-xml-file.html)
+    for a particular class.
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5269
+- description: Added a new topic about [view models](https://devdocs.magento.com/guides/v2.3/extension-dev-guide/module-development.html).
+  versions: 2.2.x, 2.3.x
+  type: New topic
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5147
+- description: Added a new topic about the [RowBuilder widget](https://devdocs.magento.com/guides/v2.2/javascript-dev-guide/widgets/widget-row-builder.html).
+  versions: 2.2.x, 2.3.x
+  type: New topic
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5206
+- description: Added new code examples to the [Customize Checkout](https://devdocs.magento.com/guides/v2.3/howdoi/checkout/checkout_customize.html)
+    tutorial.
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5225
+- description: Added a new topic about the [RowBuilder widget](https://devdocs.magento.com/guides/v2.2/javascript-dev-guide/widgets/widget-row-builder.html).
+  versions: 2.2.x, 2.3.x
+  type: New topic
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5206
+- description: Added a new topic about the [Breadcrumb widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget-breadcrumbs.html).
+  versions: 2.2.x, 2.3.x
+  type: New topic
+  date: August 26, 2019
+  link: https://github.com/magento/devdocs/pull/5228
+- description: Added a [technical guideline](https://devdocs.magento.com/guides/v2.2/coding-standards/technical-guidelines.html)
+    5.20 about exceptions in observers and plugins.
+  versions: 2.2.x, 2.3.x
+  type: Major update
+  date: August 23, 2019
+  link: https://github.com/magento/devdocs/pull/5209
+- description: Updated Magento Commerce Cloud documentation to remove obsolete instructions
+    for configuring legacy environments and migrating legacy Cloud environments to
+    use the Project Web UI. Legacy environments are those provisioned prior to October
+    23, 2017.
+  versions: 2.x
+  type: Major update
+  date: August 22, 2019
+  link: https://github.com/magento/devdocs/pull/5125
+- description: Added a tutorial about how to create a [grouped product using the REST
+    API](https://devdocs.magento.com/guides/v2.3/rest/tutorials/grouped-product/create-and-manage-grouped-products.html).
+  versions: 2.3.x
+  type: New topic
+  date: August 19, 2019
+  link: https://github.com/magento/devdocs/pull/5155
 - description: Added a tutorial about how to create a [grouped product using the REST
     API](https://devdocs.magento.com/guides/v2.3/rest/tutorials/grouped-product/create-and-manage-grouped-products.html).
   versions: 2.3.x
