--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -47,7 +47,7 @@ entries:
   date: August 26, 2019
   link: https://github.com/magento/devdocs/pull/5228
 - description: Added a [technical guideline](https://devdocs.magento.com/guides/v2.2/coding-standards/technical-guidelines.html)
-    5.20 about exceptions in observers and plugins.
+    # 5.20 about how to handle exceptions in observers and plugins..
   versions: 2.2.x, 2.3.x
   type: Major update
   date: August 23, 2019
@@ -56,50 +56,6 @@ entries:
     to remove obsolete instructions for configuring legacy environments and migrating
     legacy Cloud environments to use the Project Web UI. Legacy environments are those
     provisioned prior to October 23, 2017.
-  versions: 2.x
-  type: Major update
-  date: August 22, 2019
-  link: https://github.com/magento/devdocs/pull/5125
-- description: Added new code examples to the [JavaScript Mixins](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/javascript/js_mixins.html)
-    topic.
-  versions: 2.2.x, 2.3.x
-  type: Major update
-  date: August 26, 2019
-  link: https://github.com/magento/devdocs/pull/5229
-- description: Added new code examples to the [Loader widget](https://devdocs.magento.com/guides/v2.3/javascript-dev-guide/widgets/widget_loader.html)
-    topic.
-  versions: 2.2.x, 2.3.x
-  type: Major update
-  date: August 26, 2019
-  link: https://github.com/magento/devdocs/pull/5230
-- description: Added information about how to [retrieve dependency injection configuration
-    information](https://devdocs.magento.com/guides/v2.3/extension-dev-guide/build/di-xml-file.html)
-    for a particular class.
-  versions: 2.2.x, 2.3.x
-  type: Major update
-  date: August 26, 2019
-  link: https://github.com/magento/devdocs/pull/5269
-- description: Added a new topic about [view models](https://devdocs.magento.com/guides/v2.3/extension-dev-guide/module-development.html).
-  versions: 2.2.x, 2.3.x
-  type: New topic
-  date: August 26, 2019
-  link: https://github.com/magento/devdocs/pull/5147
-- description: Added new code examples to the [Customize Checkout](https://devdocs.magento.com/guides/v2.3/howdoi/checkout/checkout_customize.html)
-    tutorial.
-  versions: 2.2.x, 2.3.x
-  type: Major update
-  date: August 26, 2019
-  link: https://github.com/magento/devdocs/pull/5225
-- description: Added a [technical guideline](https://devdocs.magento.com/guides/v2.2/coding-standards/technical-guidelines.html)
-    5.20 about exceptions in observers and plugins.
-  versions: 2.2.x, 2.3.x
-  type: Major update
-  date: August 23, 2019
-  link: https://github.com/magento/devdocs/pull/5209
-- description: Updated the [Magento Commerce Cloud Guide](https://devdocs.magento.com/guides/v2.3/cloud/architecture/pro-develop-deploy-workflow.html) to remove obsolete instructions
-    for configuring legacy environments and migrating legacy Cloud environments to
-    use the Project Web UI. Legacy environments are those provisioned prior to October
-    23, 2017.
   versions: 2.x
   type: Major update
   date: August 22, 2019
