--- a/_data/whats-new.yml
+++ b/_data/whats-new.yml
@@ -46,7 +46,7 @@ entries:
   type: New topic
   date: August 26, 2019
   link: https://github.com/magento/devdocs/pull/5228
-- description: Added a [technical guideline](https://devdocs.magento.com/guides/v2.2/coding-standards/technical-guidelines.html)
+- description: Added [technical guideline](https://devdocs.magento.com/guides/v2.2/coding-standards/technical-guidelines.html)
     # 5.20 about how to handle exceptions in observers and plugins..
   versions: 2.2.x, 2.3.x
   type: Major update
