magento/devdocs#: Cloud. Deploy Magento to subfolder. New topic
- https://devdocs.magento.com/guides/v2.2/cloud/project/project-deploy-into-subfolder.html
- https://devdocs.magento.com/guides/v2.3/cloud/project/project-deploy-into-subfolder.html

--- a/_data/toc/cloud-guide.yml
+++ b/_data/toc/cloud-guide.yml
@@ -156,6 +156,9 @@ pages:
         - label: Install a theme
           url: /cloud/howtos/custom-theme.html
 
+        - label: Deploy Magento into sub-folder
+          url: /cloud/project/project-deploy-into-subfolder.html
+
         - label: Import URL Rewrites
           url: /cloud/configure/import-url-rewrites.html
           include_versions: ["2.2"]
