--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -13,11 +13,11 @@ pages:
         - label: Get customer authorization token
           url: /graphql/get-customer-authorization-token.html
 
-        - label: Mutations
-          url: /graphql/mutations.html
-
         - label: GraphQL Caching
           url: /graphql/caching.html
+
+        - label: Filtering with custom attributes
+          url: /graphql/filters.html
 
     - label: Development
       children:
@@ -116,6 +116,10 @@ pages:
         
     - label: Mutations
       children:
+
+        - label: Using mutations
+          url: /graphql/mutations/index.html
+
         - label: addConfigurableProductsToCart mutation
           url: /graphql/mutations/add-configurable-products.html
 
