--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -56,8 +56,8 @@ pages:
         - label: checkoutAgreements query
           url: /graphql/queries/checkout-agreements.html
 
-        - label: cmsBlock query
-          url: /graphql/queries/cms-block.html
+        - label: cmsBlocks query
+          url: /graphql/queries/cms-blocks.html
 
         - label: cmsPage query
           url: /graphql/queries/cms-page.html
@@ -77,11 +77,11 @@ pages:
         - label: customer query
           url: /graphql/queries/customer.html
 
-        - label: customerOrders query
-          url: /graphql/queries/customer-orders.html
-
         - label: customerDownloadableProducts query
           url: /graphql/queries/customer-downloadable-products.html
+
+        - label: customerOrders query
+          url: /graphql/queries/customer-orders.html
 
         - label: customerPaymentTokens query
           url: /graphql/queries/customer-payment-tokens.html
@@ -133,17 +133,23 @@ pages:
         - label: changeCustomerPassword mutation
           url: /graphql/mutations/change-customer-password.html
 
-        - label: createCustomerAddress mutation
-          url: /graphql/mutations/create-customer-address.html
+        - label: createBraintreeClientToken mutation
+          url: /graphql/mutations/create-braintree-client-token.html
 
         - label: createCustomer mutation
           url: /graphql/mutations/create-customer.html
+
+        - label: createCustomerAddress mutation
+          url: /graphql/mutations/create-customer-address.html
 
         - label: createEmptyCart mutation
           url: /graphql/mutations/create-empty-cart.html
 
         - label: createPayflowProToken mutation
           url: /graphql/mutations/create-payflow-pro-token.html
+
+        - label: createPayPalExpressToken mutation
+          url: /graphql/mutations/create-paypal-express-token.html
 
         - label: deleteCustomerAddress mutation
           url: /graphql/mutations/delete-customer-address.html
@@ -184,11 +190,11 @@ pages:
         - label: setGuestEmailOnCart mutation
           url: /graphql/mutations/set-guest-email.html
 
-        - label: setPaymentMethodOnCart mutation
-          url: /graphql/mutations/set-payment-method.html
-
         - label: setPaymentMethodAndPlaceOrder mutation
           url: /graphql/mutations/set-payment-place-order.html
+
+        - label: setPaymentMethodOnCart mutation
+          url: /graphql/mutations/set-payment-method.html
 
         - label: setShippingAddressesOnCart mutation
           url: /graphql/mutations/set-shipping-address.html
@@ -196,14 +202,14 @@ pages:
         - label: setShippingMethodsOnCart mutation
           url: /graphql/mutations/set-shipping-method.html
 
-        - label: updateCustomerAddress mutation
-          url: /graphql/mutations/update-customer-address.html
-
         - label: updateCartItems mutation
           url: /graphql/mutations/update-cart-items.html
 
         - label: updateCustomer mutation
           url: /graphql/mutations/update-customer.html
+
+        - label: updateCustomerAddress mutation
+          url: /graphql/mutations/update-customer-address.html
 
     - label: Product data types and interfaces
       children:
