--- a/_data/compatibility.yml
+++ b/_data/compatibility.yml
@@ -3,6 +3,7 @@ versions:
   - 2.3.0
   - 2.3.1
   - 2.3.2
+  - 2.3.3
 extension:
   -
     name: Amazon Sales Channel
@@ -14,6 +15,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
   -
     name: Google Shopping ads Channel
     versions:
@@ -24,6 +26,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 2.0.2
         support:
@@ -31,6 +34,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 2.0.1
         support:
@@ -38,6 +42,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 2.0.0
         support:
@@ -45,6 +50,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 1.1.2
         support:
@@ -52,6 +58,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       - 
         name: 1.1.1
         support:
@@ -59,6 +66,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
   -
     name: Magento Shipping
     versions:
@@ -86,6 +94,14 @@ extension:
   -
     name: Magento Inventory
     versions:
+      -
+        name: 1.6.1
+        support:
+          2.2.4+: not supported
+          2.3.0: general availability
+          2.3.1: general availability
+          2.3.2: general availability
+          2.3.3: general availability
       -
         name: 1.1.2
         support:
@@ -117,3 +133,4 @@ extension:
           2.3.0: open beta
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
