--- a/_data/toc/release-notes.yml
+++ b/_data/toc/release-notes.yml
@@ -10,6 +10,12 @@ pages:
         - label: Component Status
           url: /release-notes/component-status.html
 
+        - label: Magento Open Source 2.3.3 Release Notes
+          url: /release-notes/release-notes-2-3-3-open-source.html
+
+        - label: Magento Commerce 2.3.3 Release Notes
+          url: /release-notes/release-notes-2-3-3-commerce.html
+
         - label: Magento Open Source 2.3.2 Release Notes
           url: /release-notes/ReleaseNotes2.3.2OpenSource.html
 
