magento/devdocs#: Cloud. ERROR: Unable to send mail: Unknown error. New Topic.

--- a/_data/toc/cloud-guide.yml
+++ b/_data/toc/cloud-guide.yml
@@ -409,6 +409,9 @@ pages:
           url: /cloud/trouble/message-queues.html
           exclude_versions: ["2.0"]
 
+        - label: Unable to send mail: Unknown error
+          url: /cloud/trouble/unable-send-email.html
+
     - label: Upgrades and patches
       url: /cloud/project/project-upgrade-parent.html
       children:
