Added the documentation for Sortable widget (#5358)
* Added the documentation for Sortable widget

* Adjusting the sortable widget documentation

* Adjusted the sortable widget documentation

--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -109,6 +109,9 @@ pages:
         - label: RowBuilder widget
           url: /javascript-dev-guide/widgets/widget-row-builder.html
 
+        - label: Sortable widget
+          url: /javascript-dev-guide/widgets/widget-sortable.html
+
         - label: Sticky widget
           url: /javascript-dev-guide/widgets/widget_sticky.html
 
