Added the RemainingCharacters widget documentation

--- a/_data/toc/javascript-developer-guide.yml
+++ b/_data/toc/javascript-developer-guide.yml
@@ -106,6 +106,9 @@ pages:
         - label: RedirectUrl widget
           url: /javascript-dev-guide/widgets/widget_redirectUrl.html
 
+        - label: RemainingCharacters widget
+          url: /javascript-dev-guide/widgets/widget-remaining-characters.html
+
         - label: RowBuilder widget
           url: /javascript-dev-guide/widgets/widget-row-builder.html
 
