--- a/_data/toc/release-notes.yml
+++ b/_data/toc/release-notes.yml
@@ -38,6 +38,12 @@ pages:
       include_versions: ["2.2"]
       children:
 
+        - label: Magento Open Source 2.2.10 Release Notes
+          url: /release-notes/release-notes-2-2-10-open-source.html
+
+        - label: Magento Commerce 2.2.10 Release Notes
+          url: /release-notes/release-notes-2-2-10-commerce.html
+
         - label: Magento Open Source 2.2.9 Release Notes
           url: /release-notes/ReleaseNotes2.2.9CE.html
 
