Fix formatting in TOC

--- a/_data/toc/module-reference-guide-2_3.yml
+++ b/_data/toc/module-reference-guide-2_3.yml
@@ -1,6 +1,6 @@
 label: Module Reference Guide
 pages:
-  - label: INTRODUCTION
+  - label: Introduction
     url: /mrg/intro.html
   
   - label: Open Source
