--- a/_data/toc/cloud-guide.yml
+++ b/_data/toc/cloud-guide.yml
@@ -170,7 +170,7 @@ pages:
             - label: Customize error pages
               url: /cloud/cdn/cloud-fastly-custom-response.html
 
-        - label: Managed Cloud WAF
+        - label: Web Application Firewall
           url: /cloud/cdn/fastly-waf-service.html
           exclude_versions: ["2.0"]
 
