--- a/_data/compatibility.yml
+++ b/_data/compatibility.yml
@@ -24,6 +24,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 3.0.0
         support:
@@ -31,6 +32,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 2.0.2
         support:
@@ -38,6 +40,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 2.0.1
         support:
@@ -45,6 +48,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 2.0.0
         support:
@@ -52,6 +56,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       -
         name: 1.1.2
         support:
@@ -59,6 +64,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
       - 
         name: 1.1.1
         support:
@@ -66,6 +72,7 @@ extension:
           2.3.0: general availability
           2.3.1: general availability
           2.3.2: general availability
+          2.3.3: general availability
   -
     name: Magento Shipping
     versions:
