--- a/_data/toc/graphql.yml
+++ b/_data/toc/graphql.yml
@@ -227,6 +227,9 @@ pages:
         - label: Product interface implementations
           url: /graphql/product/product-interface-implementations.html
 
+        - label: ProductInterface
+          url: /graphql/product/product-interface.html
+
         - label: CustomizableOptionInterface
           url: /graphql/product/customizable-option-interface.html
 
