--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,28 @@ defaults:
       group: module-reference-guide-2_3
       github_link: false
       feedback_link: false
+      functional_areas:
+        - Reference
+
+  -
+    scope:
+      path: guides/v2.3/mrg/ce
+    values:
+      group: module-reference-guide-2_3
+      github_link: true
+      feedback_link: true
+      github_files: https://github.com/magento/magento2/blob/2.3-develop/
+      github_repo: https://github.com/magento/magento2/
+
+  -
+    scope:
+      path: guides/v2.3/mrg/msi
+    values:
+      group: module-reference-guide-2_3
+      github_link: true
+      feedback_link: true
+      github_files: https://github.com/magento/inventory/blob/2.3-develop/
+      github_repo: https://github.com/magento/inventory/
 
   -
     scope:
