magento/devdocs#: Logging into log file. New topic. (#5416)
* magento/devdocs#: Logging into log file. New topic.

* Formatting and grammar.

* Implement PR suggestions

* Implement PR suggestions

* small edits

* correct linting errors

* one more

--- a/_data/toc/configuration-guide.yml
+++ b/_data/toc/configuration-guide.yml
@@ -393,6 +393,9 @@ pages:
         - label: Example - logging database activity
           url: /config-guide/log/log-db.html
 
+        - label: Example - logging to a custom log file
+          url: /config-guide/log/custom-logger-handler.html
+
     - label: How to locate your session files
       url: /config-guide/sessions.html
 
