Update MD linting action
Add a step to update RubyGems

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: Update RubyGems
+      run: gem update --system
     - name: Install gems
       run: bundle install
     - name: Run mdl
